charts/about perfection

--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -2,7 +2,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:scrollbars="none">
 
     <LinearLayout
@@ -16,102 +15,49 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            
-            <TextView style="@style/Chart.Lable"
-                android:id="@+id/chart_fuel_lable"
-                android:text="油耗曲线图"/>
+            android:layout_height="wrap_content" >
 
-            <View style="@style/Chart.TagDivider"
-                android:layout_toRightOf="@id/chart_fuel_lable"
-                android:layout_alignBottom="@id/chart_fuel_lable"
-                />
-
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/chart_fuel_linechart"
-                android:layout_below="@id/chart_fuel_lable"
-                android:layout_marginTop="@dimen/margin_normal"
-                android:layout_width="match_parent"
-                android:layout_height="200dp" />
-        </RelativeLayout>
-
-        <View style="@style/Chart.HorizontalDivider"
-            android:layout_marginTop="@dimen/margin_normal"/>
-        <LinearLayout style="@style/Chart.ItemLayout" >
-            <View style="@style/Chart.VerticalDivider" />
-            <TextView style="@style/Chart.ItemLable"
-                android:text="最低油耗"/>
-            <View style="@style/Chart.VerticalDivider" />
-            <TextView style="@style/Chart.ItemLable"
-                android:text="最高油耗"/>
-            <View style="@style/Chart.VerticalDivider" />
-        </LinearLayout>
-        <View style="@style/Chart.HorizontalDivider" />
-        <LinearLayout style="@style/Chart.ItemLayout" >
-            <View style="@style/Chart.VerticalDivider" />
-            <TextView style="@style/Chart.ItemLable.Value"
-                android:id="@+id/chart_min_money"
-                tools:text="42元"/>
-            <View style="@style/Chart.VerticalDivider" />
-            <TextView style="@style/Chart.ItemLable.Value"
-                android:id="@+id/chart_min_oilmess"
-                tools:text="7升"/>
-            <View style="@style/Chart.VerticalDivider" />
-            <TextView style="@style/Chart.ItemLable.Value"
-                android:id="@+id/chart_max_money"
-                tools:text="105元"/>
-            <View style="@style/Chart.VerticalDivider" />
-            <TextView style="@style/Chart.ItemLable.Value"
-                android:id="@+id/chart_max_oilmess"
-                tools:text="17升"/>
-            <View style="@style/Chart.VerticalDivider" />
-        </LinearLayout>
-        <View style="@style/Chart.HorizontalDivider" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_large">
-
-            <TextView style="@style/Chart.Lable"
+            <TextView
+                style="@style/Chart.Lable"
                 android:id="@+id/chart_consumer_lable"
-                android:text="消费统计图"/>
+                android:text="@string/chart.consumer.title"/>
 
-            <View style="@style/Chart.TagDivider"
+            <View
+                style="@style/Chart.TagDivider"
                 android:layout_toRightOf="@id/chart_consumer_lable"
-                android:layout_alignBottom="@id/chart_consumer_lable"
-                />
+                android:layout_alignBottom="@id/chart_consumer_lable"/>
 
-            <com.github.mikephil.charting.charts.BarChart
-                android:id="@+id/chart_consumer_barchart"
-                android:layout_below="@id/chart_consumer_lable"
-                android:layout_marginTop="@dimen/margin_normal"
-                android:layout_width="match_parent"
-                android:layout_height="200dp" />
         </RelativeLayout>
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/chart_consumer_barchart"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/chart_height"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_large">
 
-            <TextView style="@style/Chart.Lable"
+            <TextView
+                style="@style/Chart.Lable"
                 android:id="@+id/chart_percentage_lable"
-                android:text="消费百分比"/>
+                android:text="@string/chart.percentage.title"/>
 
-            <View style="@style/Chart.TagDivider"
+            <View
+                style="@style/Chart.TagDivider"
                 android:layout_toRightOf="@id/chart_percentage_lable"
-                android:layout_alignBottom="@id/chart_percentage_lable"
-                />
+                android:layout_alignBottom="@id/chart_percentage_lable"/>
 
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/chart_percentage_piechart"
-                android:layout_below="@id/chart_percentage_lable"
-                android:layout_marginTop="@dimen/margin_normal"
-                android:layout_centerHorizontal="true"
-                android:layout_width="match_parent"
-                android:layout_height="240dp" />
         </RelativeLayout>
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/chart_percentage_piechart"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/chart_height"/>
 
         <LinearLayout
             android:id="@+id/chart_percentage_detail"
@@ -119,6 +65,83 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
             android:orientation="vertical"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_large">
+
+            <TextView
+                style="@style/Chart.Lable"
+                android:id="@+id/chart_fuel_lable"
+                android:text="@string/chart.fuel.title"/>
+
+            <View
+                style="@style/Chart.TagDivider"
+                android:layout_toRightOf="@id/chart_fuel_lable"
+                android:layout_alignBottom="@id/chart_fuel_lable"/>
+
+        </RelativeLayout>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart_fuel_linechart"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/chart_height"/>
+
+        <View
+            style="@style/Chart.HorizontalDivider"
+            android:layout_marginTop="@dimen/margin_normal"/>
+
+        <LinearLayout style="@style/Chart.ItemLayout">
+
+            <View style="@style/Chart.VerticalDivider"/>
+
+            <TextView
+                style="@style/Chart.ItemLable"
+                android:text="@string/chart.fuel.min.lable"/>
+
+            <View style="@style/Chart.VerticalDivider"/>
+
+            <TextView
+                style="@style/Chart.ItemLable"
+                android:text="@string/chart.fuel.max.lable"/>
+
+            <View style="@style/Chart.VerticalDivider"/>
+        </LinearLayout>
+
+        <View style="@style/Chart.HorizontalDivider"/>
+
+        <LinearLayout style="@style/Chart.ItemLayout">
+
+            <View style="@style/Chart.VerticalDivider"/>
+
+            <TextView
+                style="@style/Chart.ItemLable.Value"
+                android:id="@+id/chart_min_money"/>
+
+            <View style="@style/Chart.VerticalDivider"/>
+
+            <TextView
+                style="@style/Chart.ItemLable.Value"
+                android:id="@+id/chart_min_oilmess"/>
+
+            <View style="@style/Chart.VerticalDivider"/>
+
+            <TextView
+                style="@style/Chart.ItemLable.Value"
+                android:id="@+id/chart_max_money"/>
+
+            <View style="@style/Chart.VerticalDivider"/>
+
+            <TextView
+                style="@style/Chart.ItemLable.Value"
+                android:id="@+id/chart_max_oilmess"/>
+
+            <View style="@style/Chart.VerticalDivider"/>
+        </LinearLayout>
+
+        <View style="@style/Chart.HorizontalDivider"/>
 
     </LinearLayout>
 </ScrollView>
