--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,13 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <TextView
-        android:text="About"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        style="@style/ItemText.Black.Larger"
-        />
-</RelativeLayout>
+        android:layout_marginTop="@dimen/margin_larger"
+        android:src="@mipmap/ic_launcher"/>
+
+    <TextView
+        style="@style/ItemText.Gray.Large"
+        android:id="@+id/about_version"
+        android:layout_marginTop="@dimen/margin_normal"
+        android:layout_marginBottom="@dimen/margin_larger"
+        tools:text="v1.0"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/bg_while"
+        android:paddingTop="@dimen/margin_normal"
+        android:paddingBottom="@dimen/margin_normal"
+        android:paddingLeft="@dimen/margin_large"
+        android:paddingRight="@dimen/margin_large"
+        android:layout_margin="@dimen/margin_large">
+
+        <TextView
+            style="@style/About.ItemLable"
+            android:id="@+id/about_update"
+            android:text="@string/about.update"/>
+
+        <View style="@style/Divider"/>
+
+        <TextView
+            style="@style/About.ItemLable"
+            android:id="@+id/about_feedback"
+            android:text="@string/about.feedback"/>
+
+        <View style="@style/Divider"/>
+
+        <TextView
+            style="@style/About.ItemLable"
+            android:id="@+id/about_author"
+            android:text="@string/about.author"/>
+
+        <View style="@style/Divider"/>
+
+        <TextView
+            style="@style/About.ItemLable"
+            android:id="@+id/about_thanks"
+            android:text="@string/about.thanks"/>
+
+    </LinearLayout>
+
+</LinearLayout>
