--- a/app/src/main/res/layout/item_table.xml
+++ b/app/src/main/res/layout/item_table.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <View
         style="@style/Chart.HorizontalDivider"
@@ -36,4 +39,4 @@
         style="@style/Chart.HorizontalDivider"
         android:visibility="gone"
         android:id="@+id/item_table_bottom_divider"/>
-</merge>
+</LinearLayout>
