--- a/app/src/main/res/layout/activity_add_consumer.xml
+++ b/app/src/main/res/layout/activity_add_consumer.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <include layout="@layout/toolbar" />
+<!--
+    <include layout="@layout/toolbar" />-->
 
     <ScrollView
         android:layout_width="match_parent"
