fix fragment overlay

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/windowBackground"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -10,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_larger"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/ic_logo"/>
 
     <TextView
         style="@style/ItemText.Gray.Normal"
