--- a/app/src/main/res/layout/item_table.xml
+++ b/app/src/main/res/layout/item_table.xml
@@ -16,6 +16,8 @@
         <TextView
             style="@style/Chart.ItemLable"
             android:id="@+id/item_table_lable"
+            android:gravity="right|center_vertical"
+            android:layout_marginRight="@dimen/margin_normal"
             tools:text="最低油耗"/>
 
         <View style="@style/Chart.VerticalDivider"/>
