--- a/app/src/main/res/layout/activity_thanks.xml
+++ b/app/src/main/res/layout/activity_thanks.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<!--
-    <include layout="@layout/toolbar" />-->
+    <include layout="@layout/toolbar" />
 
     <TextView
         style="@style/ItemText.Gray.Normal"
