--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="72dp"
+        android:layout_marginRight="@dimen/fab_margin"
         android:src="@drawable/ic_add"
         app:fab_colorNormal="@color/colorAccent"
         />
