Fix Nexus6P(Android 7.0) bugs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,6 @@
         android:layout_height="@dimen/bottombar_height"
         android:layout_gravity="bottom"
         app:bb_tabXmlResource="@xml/bottombar_tabs"
-        app:bb_behavior="shifting|underNavbar" />
+        app:bb_behavior="shifting" />
 
 </FrameLayout>
