--- a/app/src/main/res/layout/dialog_author.xml
+++ b/app/src/main/res/layout/dialog_author.xml
@@ -1,7 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ContentDescription"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:baselineAligned="false"
     android:paddingTop="@dimen/margin_larger"
     android:paddingBottom="@dimen/margin_larger"
     android:background="@android:color/white">
