--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,70 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?attr/actionBarSize"
-    android:background="@color/windowBackground"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_marginBottom="?attr/actionBarSize"
+    android:scrollbars="none">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_larger"
-        android:src="@drawable/ic_logo"/>
-
-    <TextView
-        style="@style/ItemText.Gray.Normal"
-        android:id="@+id/about_version"
-        android:layout_marginTop="@dimen/margin_normal"
-        android:layout_marginBottom="@dimen/margin_larger"
-        tools:text="v1.0"/>
-
-    <LinearLayout
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+        tools:ignore="ContentDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/bg_while"
-        android:paddingTop="@dimen/margin_normal"
-        android:paddingBottom="@dimen/margin_normal"
-        android:paddingLeft="@dimen/margin_large"
-        android:paddingRight="@dimen/margin_large"
-        android:layout_margin="@dimen/margin_large">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_larger"
+            android:src="@drawable/ic_logo"/>
 
         <TextView
-            style="@style/About.ItemLable"
-            android:id="@+id/about_update"
-            android:text="@string/about.update"/>
+            style="@style/ItemText.Gray.Normal"
+            android:id="@+id/about_version"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:layout_marginBottom="@dimen/margin_larger"
+            tools:text="v1.0"/>
 
-        <View style="@style/Divider"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/bg_while"
+            android:paddingTop="@dimen/margin_normal"
+            android:paddingBottom="@dimen/margin_normal"
+            android:paddingLeft="@dimen/margin_large"
+            android:paddingRight="@dimen/margin_large"
+            android:layout_margin="@dimen/margin_large">
 
-        <TextView
-            style="@style/About.ItemLable"
-            android:id="@+id/about_feedback"
-            android:text="@string/about.feedback"/>
+            <TextView
+                style="@style/About.ItemLable"
+                android:id="@+id/about_update"
+                android:text="@string/about.update"/>
 
-        <View style="@style/Divider"/>
+            <View style="@style/Divider"/>
 
-        <TextView
-            style="@style/About.ItemLable"
-            android:id="@+id/about_author"
-            android:text="@string/about.author"/>
+            <TextView
+                style="@style/About.ItemLable"
+                android:id="@+id/about_feedback"
+                android:text="@string/about.feedback"/>
 
-        <View style="@style/Divider"/>
+            <View style="@style/Divider"/>
 
-        <TextView
-            style="@style/About.ItemLable"
-            android:id="@+id/about_share"
-            android:text="@string/about.share"/>
+            <TextView
+                style="@style/About.ItemLable"
+                android:id="@+id/about_author"
+                android:text="@string/about.author"/>
 
-        <View style="@style/Divider"/>
+            <View style="@style/Divider"/>
 
-        <TextView
-            style="@style/About.ItemLable"
-            android:id="@+id/about_thanks"
-            android:text="@string/about.thanks"/>
+            <TextView
+                style="@style/About.ItemLable"
+                android:id="@+id/about_share"
+                android:text="@string/about.share"/>
+
+            <View style="@style/Divider"/>
+
+            <TextView
+                style="@style/About.ItemLable"
+                android:id="@+id/about_thanks"
+                android:text="@string/about.thanks"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
