--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ContentDescription"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:paddingTop="@dimen/margin_normal"
@@ -13,8 +14,9 @@
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/margin_normal"
+        android:layout_marginEnd="@dimen/margin_normal"
         android:layout_marginTop="18dp"
-        android:gravity="right"
+        android:gravity="end"
         style="@style/ItemText.Gray.Small"
         />
 
@@ -23,8 +25,11 @@
         android:layout_width="@dimen/icon_larger"
         android:layout_height="@dimen/icon_larger"
         android:layout_marginRight="@dimen/margin_normal"
+        android:layout_marginEnd="@dimen/margin_normal"
         android:layout_marginBottom="@dimen/margin_normal"
-        android:layout_toRightOf="@id/item_timeline_time" >
+        android:layout_toRightOf="@id/item_timeline_time"
+        android:layout_toEndOf="@id/item_timeline_time"
+        >
 
         <com.classic.car.widget.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -53,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@id/item_timeline_icon_layout"
+        android:layout_toEndOf="@id/item_timeline_icon_layout"
         android:textSize="@dimen/font_normal"
         />
     <TextView
@@ -63,6 +69,7 @@
         android:layout_marginTop="@dimen/margin_large"
         android:layout_below="@id/item_timeline_content"
         android:layout_toRightOf="@id/item_timeline_icon_layout"
+        android:layout_toEndOf="@id/item_timeline_icon_layout"
         android:textSize="@dimen/font_larger"
         />
 
@@ -71,7 +78,9 @@
         android:layout_height="match_parent"
         android:layout_below="@id/item_timeline_icon_layout"
         android:layout_alignLeft="@id/item_timeline_icon_layout"
+        android:layout_alignStart="@id/item_timeline_icon_layout"
         android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
         android:background="@color/timeline_blue"
         />
 
