--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -150,7 +150,7 @@
         <item name="android:orientation">horizontal</item>
     </style>
     <style name="Chart"/>
-    <style name="Chart.Lable">
+    <style name="Chart.Label">
         <item name="android:layout_width">106dp</item>
         <item name="android:layout_height">32dp</item>
         <item name="android:textSize">@dimen/font_large</item>
@@ -187,14 +187,14 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/divider_dark</item>
     </style>
-    <style name="Chart.ItemLable">
+    <style name="Chart.ItemLabel">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:gravity">center</item>
     </style>
-    <style name="Chart.ItemLable.Value">
+    <style name="Chart.ItemLabel.Value">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
@@ -207,8 +207,14 @@
         <item name="android:layout_height">2dp</item>
         <item name="android:background">@color/colorAccent</item>
     </style>
+    <style name="Chart.Button">
+        <item name="android:layout_width">@dimen/icon_larger</item>
+        <item name="android:layout_height">@dimen/icon_larger</item>
+        <item name="android:layout_margin">@dimen/margin_normal</item>
+        <item name="android:background">@null</item>
+    </style>
     <style name="About" />
-    <style name="About.ItemLable">
+    <style name="About.ItemLabel">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:textSize">@dimen/font_normal</item>
