--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -3,7 +3,8 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/chart_layout"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:fitsSystemWindows="true">
 
     <ImageButton
         style="@style/Chart.Button"
